tests/ui/splat/splat-overload-at-home-fail.stderr
error[E0308]: mismatched types
  --> $DIR/splat-overload-at-home-fail.rs:38:16
   |
LL |     foo.method(42f32);
   |         ------ ^^^^^ expected `i32`, found `f32`
   |         |
   |         arguments to this method are incorrect
   |
note: method defined here
  --> $DIR/splat-overload-at-home-fail.rs:29:8
   |
LL |     fn method<T: MethodArgs>(&self, #[splat] args: T) {
   |        ^^^^^^                       ----------------
help: change the type of the numeric literal from `f32` to `i32`
   |
LL -     foo.method(42f32);
LL +     foo.method(42i32);
   |

error[E0308]: mismatched types
  --> $DIR/splat-overload-at-home-fail.rs:42:23
   |
LL |     foo.method(42i32, 42i32);
   |         ------        ^^^^^ expected `String`, found `i32`
   |         |
   |         arguments to this method are incorrect
   |
note: method defined here
  --> $DIR/splat-overload-at-home-fail.rs:29:8
   |
LL |     fn method<T: MethodArgs>(&self, #[splat] args: T) {
   |        ^^^^^^
help: try using a conversion method
   |
LL |     foo.method(42i32, 42i32.to_string());
   |                            ++++++++++++

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0308`.
